Express Client#{Job,File}Retention to days instead of seconds

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -7,8 +7,8 @@
         <th>Name</th>
         <th>Uname</th>
         <th>AutoPrune</th>
-        <th>FileRetention</th>
-        <th>JobRetention</th>
+        <th>FileRetention (days)</th>
+        <th>JobRetention (days)</th>
       </tr>
     </thead>
 
