--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -2,6 +2,6 @@
   <td><%= link_to client.name, client %></td>
   <td><%= client.uname %></td>
   <td><%= client.auto_prune %></td>
-  <td><%= client.file_retention %></td>
-  <td><%= client.job_retention %></td>
+  <td><%= client.file_retention_days %></td>
+  <td><%= client.job_retention_days %></td>
 </tr>
