--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -6,9 +6,13 @@
       <tr>
         <th>Name</th>
         <th>Uname</th>
-        <th>AutoPrune</th>
+        <th>Active Jobs</th>
+        <th>Last Backup</th>
         <th>FileRetention (days)</th>
         <th>JobRetention (days)</th>
+        <th>Space Used</th>
+        <th>File count</th>
+        <th>AutoPrune</th>
       </tr>
     </thead>
 
