Add create new host functionality

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,7 @@
+<div class="row right">
+  <%= link_to 'New Client', new_host_path, class: 'btn btn-primary', role: 'button' %>
+</div>
+
 <h1>My Hosts</h1>
 
 <div class="table-responsive">
