--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,7 +2,7 @@
   <%= link_to 'New Client', new_host_path, class: 'btn btn-primary', role: 'button' %>
 </div>
 
-<h1>My Hosts</h1>
+<h1>My Bacula Clients</h1>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-condensed">
@@ -22,6 +22,29 @@
 
     <tbody>
       <%= render partial: 'client', collection: @clients %>
+    </tbody>
+  </table>
+</div>
+
+<h1>My Pending Hosts</h1>
+
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-condensed">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>FQDN</th>
+        <th>Port</th>
+        <th>Password</th>
+        <th>FileRetention (days)</th>
+        <th>JobRetention (days)</th>
+        <th>AutoPrune</th>
+        <th>Created At</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <%= render partial: 'hosts/host', collection: @hosts %>
     </tbody>
   </table>
 </div>
