--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -26,7 +26,8 @@
   </table>
 </div>
 
-<h1>My Pending Hosts</h1>
+<% if @hosts.any? %>
+  <h1>My Pending Hosts</h1>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-condensed">
