Style new host form better

--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -1,12 +1,15 @@
-<%= bootstrap_form_for(@host) do |f| %>
+<%= bootstrap_form_for(@host, layout: :horizontal,
+                       label_col: 'col-xs-3', control_col: 'col-xs-8') do |f| %>
   <div>
   <%= f.text_field :fqdn %>
   <%= f.text_field :password %>
-  <%= f.number_field :port %>
+  <%= f.number_field :port, value: 9102 %>
   </div>
 
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <div class="col-xs-offset-3 col-xs-8">
+      <%= f.submit class: 'btn btn-success' %>
+    </div>
   </div>
 <% end %>
