--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New Host</h1>
 
-<%= render 'form' %>
+<div class="container graybox">
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Back', clients_path %>
