Host controller fix redirects after create/destroy and add confirm message to destroy action

--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="row right">
-  <%= link_to 'Remove host', host_path(@host), method: :delete,
+  <%= link_to 'Remove host', host_path(@host), method: :delete, data: { confirm: 'Are you sure?' },
     class: "btn btn-danger", role: "button" %>
 </div>
 
