Add new schedules

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -44,7 +44,7 @@
     </div>
 
     <div class="col-xs-1">
-      <%= link_to 'Add', '#', class: 'btn btn-primary', role: 'button' %>
+      <%= link_to 'Add', new_schedule_path, class: 'btn btn-primary', role: 'button' %>
     </div>
   </div>
 
