Show enabled flag on job templates

--- a/app/views/jobs/_job_templates.html.erb
+++ b/app/views/jobs/_job_templates.html.erb
@@ -6,8 +6,10 @@
           <th>Name</th>
           <th>Type</th>
           <th>FileSet</th>
+          <th>Restore Location</th>
           <th>Schedule</th>
           <th>Priority</th>
+          <th>Enabled</th>
         </tr>
       </thead>
 
