--- a/app/views/jobs/_job_template_details.html.erb
+++ b/app/views/jobs/_job_template_details.html.erb
@@ -2,7 +2,9 @@
   <td><%= link_to job.name, host_job_path(@host, job) %></td>
   <td><%= job.job_type %></td>
   <td><%= job.fileset.name %></td>
+  <td><%= job.restore_location %></td>
   <td><%= job.schedule.name %></td>
   <td><%= job.priority %></td>
+  <td><%= job.enabled_human %></td>
 </tr>
 
