--- a/app/views/jobs/_job_template_details.html.erb
+++ b/app/views/jobs/_job_template_details.html.erb
@@ -5,6 +5,14 @@
   <td><%= job.restore_location %></td>
   <td><%= job.schedule.name %></td>
   <td><%= job.priority %></td>
-  <td><%= job.enabled_human %></td>
+  <td>
+    <% if job.enabled? %>
+      <%= link_to 'Disable', toggle_enable_host_job_path(@host, job), method: :patch,
+        class: "btn btn-warning", role: "button" %>
+    <% else %>
+      <%= link_to 'Enable', toggle_enable_host_job_path(@host, job), method: :patch,
+        class: "btn btn-info", role: "button" %>
+    <% end %>
+  </td>
 </tr>
 
