--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -9,3 +9,10 @@
 <div class="row">
   <%= render partial: 'job_details' %>
 </div>
+
+<div class="row">
+  <div class="col-xs-2">
+    <%= link_to 'Edit', edit_host_job_path(@host, @job),
+      class: "btn btn-primary", role: "button" %>
+  </div>
+</div>
