--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -10,10 +10,10 @@
 <br/>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-xs-4">
     <h3>Host Details</h3>
   </div>
-  <div class="col-md-8">
+  <div class="col-xs-6">
     <h3>Jobs</h3>
   </div>
 </div>
