--- a/app/views/jobs/_job_templates.html.erb
+++ b/app/views/jobs/_job_templates.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8">
+<div class="col-xs-6">
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed">
       <thead>
@@ -14,9 +14,11 @@
       </thead>
 
       <tbody>
-        <%= render partial: 'jobs/job_template_details', collection: @host.job_templates, as: :job %>
+        <%= render partial: 'jobs/job_template_details',
+          collection: @host.job_templates, as: :job %>
       </tbody>
     </table>
   </div>
-  <%= link_to 'Add Job', new_host_job_path(host_id: @host.id), class: "btn btn-success", role: "button" %>
+  <%= link_to 'Add Job', new_host_job_path(host_id: @host.id),
+    class: "btn btn-success", role: "button" %>
 </div>
