--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -16,8 +16,6 @@
 
   <%= f.text_field :name %>
 
-  <%= f.select :job_type, options_for_select(JobTemplate.job_types.keys) %>
-
   <div class="form-group">
     <%= label :job_template, :fileset_id, 'Fileset', class: 'control-label col-xs-4' %>
     <div class="col-xs-6">
@@ -34,7 +32,7 @@
   </div>
 
   <div class="form-group">
-    <%= label :job_template, :schedule_id, 'Schedule', class: 'control-label col-xs-4' %>
+    <%= label :job_template, :schedule_id, 'Schedule Time', class: 'control-label col-xs-4' %>
     <div class="col-xs-6">
       <%= select_tag(:job_template_schedule_id,
                      options_for_select(Schedule.pluck(:name, :id)),
