--- a/app/views/jobs/_job_template_details.html.erb
+++ b/app/views/jobs/_job_template_details.html.erb
@@ -3,7 +3,7 @@
   <td><%= job.job_type %></td>
   <td><%= job.fileset.name %></td>
   <td><%= job.restore_location %></td>
-  <td><%= job.schedule.name %></td>
+  <td><%= job.schedule_human %></td>
   <td><%= job.priority %></td>
   <td>
     <% if job.enabled? %>
