JobTemplate form accepts a restore location attribute.
This attribute is going to be assigned to the restore job which will be
created alongside with the backup job.

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -46,6 +46,8 @@
     </div>
   </div>
 
+  <%= f.text_field :restore_location, label: 'Restore Location', placeholder: '/tmp/bacula' %>
+
   <div class="form-group">
     <div class="col-xs-offset-4 col-xs-8">
       <%= f.submit class: "btn btn-success" %>
