Cleanup job views

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,4 +15,8 @@
     <%= link_to 'Edit', edit_host_job_path(@host, @job),
       class: "btn btn-primary", role: "button" %>
   </div>
+  <div class="col-xs-2">
+    <%= link_to 'Back to host', host_path(@host),
+      class: "btn btn-success", role: "button" %>
+  </div>
 </div>
