--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,29 +1,19 @@
 <%= bootstrap_form_for(@job, url: @job.new_record? ? host_jobs_path : host_job_path(@host, @job), layout: :horizontal, label_col: 'col-xs-4', control_col: 'col-xs-6') do |f| %>
-  <% if @job.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@job.errors.count, "error") %>
-        prohibited this host from being saved:
-      </h2>
-
-      <ul>
-      <% @job.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <%= f.text_field :name %>
 
-  <div class="form-group">
-    <%= label :job_template, :fileset_id, 'Fileset', class: 'control-label col-xs-4' %>
+  <div class="form-group<%= ' has-error' if @job.errors[:fileset_id].present? %>">
+    <%= label :job_template, :fileset_id, 'Fileset', class: 'control-label col-xs-4 required' %>
     <div class="col-xs-6">
       <%= select_tag(:job_template_fileset_id,
                      options_for_select(Fileset.pluck(:name, :id)),
                      name: 'job_template[fileset_id]',
                      class: 'form-control'
                     ) %>
+      <% if @job.errors[:fileset_id].present? %>
+        <span class='help-block'>
+          <%= @job.errors[:fileset_id].first %>
+        </span>
+      <% end %>
     </div>
 
     <div class="col-xs-1">
@@ -31,20 +21,27 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <%= label :job_template, :schedule_id, 'Schedule Time', class: 'control-label col-xs-4' %>
-    <div class="col-xs-6">
-      <%= select_tag(:job_template_schedule_id,
-                     options_for_select(Schedule.pluck(:name, :id)),
-                     name: 'job_template[schedule_id]',
-                     class: 'form-control'
-                    ) %>
-    </div>
+  <% if !@job.restore? %>
+    <div class="form-group<%= ' has-error' if @job.errors[:schedule_id].present? %>">
+      <%= label :job_template, :schedule_id, 'Schedule Time', class: 'control-label col-xs-4' %>
+      <div class="col-xs-6">
+        <%= select_tag(:job_template_schedule_id,
+                       options_for_select(Schedule.pluck(:name, :id)),
+                       name: 'job_template[schedule_id]',
+                       class: 'form-control'
+                      ) %>
+        <% if @job.errors[:schedule_id].present? %>
+          <span class='help-block'>
+            <%= @job.errors[:schedule_id].first %>
+          </span>
+        <% end %>
+      </div>
 
-    <div class="col-xs-1">
-      <%= link_to 'Add', new_schedule_path, class: 'btn btn-primary', role: 'button' %>
+      <div class="col-xs-1">
+        <%= link_to 'Add', new_schedule_path, class: 'btn btn-primary', role: 'button' %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
   <%= f.text_field :restore_location, label: 'Restore Location', placeholder: '/tmp/bacula' %>
 
