--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -26,7 +26,7 @@
       <%= label :job_template, :schedule_id, 'Schedule Time', class: 'control-label col-xs-4' %>
       <div class="col-xs-6">
         <%= select_tag(:job_template_schedule_id,
-                       options_for_select(Schedule.pluck(:name, :id)),
+                       options_for_select(@host.schedules.pluck(:name, :id)),
                        name: 'job_template[schedule_id]',
                        class: 'form-control'
                       ) %>
@@ -38,7 +38,7 @@
       </div>
 
       <div class="col-xs-1">
-        <%= link_to 'Add', new_schedule_path, class: 'btn btn-primary', role: 'button' %>
+        <%= link_to 'Add', new_host_schedule_path(@host), class: 'btn btn-primary', role: 'button' %>
       </div>
     </div>
   <% end %>
