--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -1,9 +1,10 @@
 <%= bootstrap_form_for(@host, layout: :horizontal,
                        label_col: 'col-xs-3', control_col: 'col-xs-8') do |f| %>
   <div>
-  <%= f.text_field :fqdn %>
-  <%= f.text_field :password %>
-  <%= f.number_field :port, value: 9102 %>
+
+    <%= f.text_field :fqdn, disabled: @host.persisted? %>
+    <%= f.text_field :password %>
+    <%= f.number_field :port, value: 9102 %>
   </div>
 
 
