--- a/app/views/hosts/_host_details.html.erb
+++ b/app/views/hosts/_host_details.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="col-xs-4">
   <div class="table-responsive">
     <table class="table table-striped table-bordered table-condensed">
       <tr>
@@ -35,5 +35,16 @@
       </tr>
     </table>
   </div>
-  <%= link_to 'Edit', edit_host_path(@host), class: "btn btn-primary", role: "button" %>
+
+  <div class='row'>
+    <div class='col-xs-2'>
+      <%= link_to 'Edit', edit_host_path(@host), class: "btn btn-primary", role: "button" %>
+    </div>
+    <% if @host.ready? %>
+      <div class='col-xs-4 pull-right text-right'>
+        <%= link_to 'Send to Bacula', submit_config_host_path(@host), method: :post,
+                    class: 'btn btn-success', role: 'button' %>
+      </div>
+    <% end %>
+  </div>
 </div>
