--- a/app/views/hosts/_host_details.html.erb
+++ b/app/views/hosts/_host_details.html.erb
@@ -40,11 +40,18 @@
     <div class='col-xs-2'>
       <%= link_to 'Edit', edit_host_path(@host), class: "btn btn-primary", role: "button" %>
     </div>
-    <% if @host.ready? %>
+    <% if @host.needs_dispatch? %>
       <div class='col-xs-4 pull-right text-right'>
-        <%= link_to 'Send to Bacula', submit_config_host_path(@host), method: :post,
+        <%= link_to 'Deploy Changes', submit_config_host_path(@host), method: :post,
                     class: 'btn btn-success', role: 'button' %>
       </div>
     <% end %>
+    <% if @host.needs_revoke? %>
+      <div class='col-xs-4 pull-right text-right'>
+        <%= link_to 'Remove From Bacula', revoke_host_path(@host), method: :delete,
+                    class: 'btn btn-danger', role: 'button' %>
+      </div>
+    <% end %>
+
   </div>
 </div>
