--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -7,45 +7,18 @@
 
 <h2><%= @client.name %></h2>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-condensed">
-    <tr>
-      <td>Name</td>
-      <td><%= @client.name %></td>
-    </tr>
-    <tr>
-      <td>Uname</td>
-      <td><%= @client.uname %></td>
-    </tr>
-    <tr>
-      <td>Active Jobs</td>
-      <td><%= @client.running_jobs %></td>
-    </tr>
-    <tr>
-      <td>Last Backup</td>
-      <td><%= @client.last_job_date %></td>
-    </tr>
-    <tr>
-      <td>File Retention</td>
-      <td><%= @client.file_retention_days %> days</td>
-    </tr>
-    <tr>
-      <td>Job Retention</td>
-      <td><%= @client.job_retention_days %> days</td>
-    </tr>
-    <tr>
-      <td>Total Space Used</td>
-      <td><%= number_to_human_size @client.backup_jobs_size %></td>
-    </tr>
-    <tr>
-      <td>Files count</td>
-      <td><%= number_by_magnitude(@client.files_count) %></td>
-    </tr>
-    <tr>
-      <td>Auto Prune</td>
-      <td><%= @client.auto_prune_human %></td>
-    </tr>
-  </table>
+<div class="row">
+  <div class="col-xs-4">
+    <h3>Client Details</h3>
+  </div>
+  <div class="col-xs-6">
+    <h3>Bacula Jobs</h3>
+  </div>
+</div>
+
+<div class="row">
+  <%= render partial: 'client_details' %>
+  <%= render partial: 'jobs' %>
 </div>
 
 <div>
