--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -2,7 +2,7 @@
   <td><%= link_to client.name, client %></td>
   <td><%= client.uname %></td>
   <td><%= @active_jobs[client.id] || 0 %></td>
-  <td><%= client.last_job_date %></td>
+  <td><%= client.last_job_date_formatted %></td>
   <td><%= client.file_retention_days %></td>
   <td><%= client.job_retention_days %></td>
   <td><%= number_to_human_size(client.backup_jobs_size) %></td>
