--- a/app/views/clients/_recent_jobs.html.erb
+++ b/app/views/clients/_recent_jobs.html.erb
@@ -4,16 +4,18 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Type</th>
+          <th>JobId</th>
+          <th>Level</th>
           <th>Fileset</th>
-          <th>Restore Location</th>
-          <th>Schedule</th>
-          <th>Created</th>
-          <th>Actions</th>
+          <th>Started At</th>
+          <th>Finished At</th>
+          <th>Bytes</th>
+          <th>Files</th>
+          <th>Status</th>
         </tr>
       </thead>
       <tbody>
-        <%= render partial: 'clients/job', collection: @client.persisted_jobs, object: :job %>
+        <%= render partial: 'clients/recent_job', collection: @client.recent_jobs %>
       </tbody>
     </table>
   </div>
