--- a/app/views/clients/_client_details.html.erb
+++ b/app/views/clients/_client_details.html.erb
@@ -42,6 +42,13 @@
     </table>
   </div>
   <div>
-    <%= link_to 'Restore Files', '#', class: "btn btn-warning", role: "button" %>
+    <% if @client.is_backed_up? %>
+      <%= link_to 'Restore Files', restore_host_path(@client.host),
+        class: "btn btn-warning", role: "button", method: :post,
+        data: {
+          confirm: "This will restore all your files at the most recent backup (#{@client.last_job_date_formatted})"
+        }
+        %>
+    <% end %>
   </div>
 </div>
