--- a/app/views/filesets/_form.html.erb
+++ b/app/views/filesets/_form.html.erb
@@ -2,10 +2,8 @@
                        label_col: 'col-xs-3', control_col: 'col-xs-8') do |f| %>
   <div>
     <%= f.text_field :name %>
-    <%= f.text_field :include_files, label: 'Files', placeholder: '/', multiple: true %>
-    <%= f.text_field :include_files, label: 'Files', placeholder: '/media', multiple: true %>
-    <%= f.text_field :exclude_directions, label: 'Exclude', placeholder: '/proc', multiple: true %>
-    <%= f.text_field :exclude_directions, label: 'Exclude', placeholder: '/bacula', multiple: true %>
+    <%= text_with_errors_and_plus(@fileset, :fileset, :include_files, 'Files', '/') %>
+    <%= text_with_errors_and_plus(@fileset, :fileset, :exclude_directions, 'Exclude', '/bacula') %>
     <%= (hidden_field_tag :job_id, @job_id) if @job_id%>
   </div>
 
