Show job logs to client index and show pages

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -38,3 +38,7 @@
 <%= link_to 'Back to clients', clients_path %>
 
 <%= render partial: 'client_graphs', locals: { path: client_path(@client) } %>
+
+<br/>
+
+<%= render partial: 'logs' %>
