--- a/app/views/jobs/_job_templates.html.erb
+++ b/app/views/jobs/_job_templates.html.erb
@@ -7,6 +7,8 @@
           <th>Type</th>
           <th>FileSet</th>
           <th>Schedule</th>
+          <th>Client Before Run Job</th>
+          <th>Client After Run Job</th>
           <th>Priority</th>
           <th>Enabled</th>
         </tr>
