--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -24,6 +24,11 @@
           </ul>
         </li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user.admin? %>
+          <li><%= link_to 'Admin', admin_path %></li>
+        <% end %>
+      </ul>
     </div><!--/.nav-collapse -->
   </div>
 </nav>
