--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -27,6 +27,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if current_user.admin? %>
           <li><%= link_to 'Admin', admin_path %></li>
+          <li><%= link_to 'Clients', admin_clients_path %></li>
         <% end %>
       </ul>
     </div><!--/.nav-collapse -->
