Split clients show to atomic components and simplify clients index
client show:

* general info
* Jobs
* Logs
* Stats

clients index no longer shows logs

--- a/app/views/admin/clients/show.html.erb
+++ b/app/views/admin/clients/show.html.erb
@@ -1,11 +1,4 @@
-<p id="notice"><%= notice %></p>
-<% if @client.host %>
-  <div class="row right">
-    <%= link_to 'Manage Client', 'admin_host_path(@client.host)', class: "btn btn-primary", role: "button" %>
-  </div>
-<% end %>
-
-<h2><%= @client.name %></h2>
+<%= render partial: 'header' %>
 
 <div class="row">
   <div class="col-xs-4">
@@ -24,21 +17,5 @@
         <%= render partial: 'jobs' %>
       <% end %>
     </div>
-    <div class="row">
-      <div class="col-xs-6">
-        <h3>Recent Jobs</h3>
-      </div>
-    </div>
-    <div class="row">
-      <%= render partial: 'recent_jobs' %>
-    </div>
   </div>
 </div>
-
-<br/>
-
-<%= render partial: 'client_graphs', locals: { path: admin_client_path(@client) } %>
-
-<br/>
-
-<%= render partial: 'logs' %>
