--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,11 +1,4 @@
-<p id="notice"><%= notice %></p>
-<% if @client.host %>
-  <div class="row right">
-    <%= link_to 'Manage Client', host_path(@client.host), class: "btn btn-primary", role: "button" %>
-  </div>
-<% end %>
-
-<h2><%= @client.name %></h2>
+<%= render partial: 'header' %>
 
 <div class="row">
   <div class="col-xs-4">
@@ -22,23 +15,9 @@
     <div class="row">
       <%= render partial: 'jobs' %>
     </div>
-    <div class="row">
-      <div class="col-xs-6">
-        <h3>Recent Jobs</h3>
-      </div>
-    </div>
-    <div class="row">
-      <%= render partial: 'recent_jobs' %>
-    </div>
   </div>
 </div>
 
 <br/>
 
 <%= link_to 'Back to clients', clients_path %>
-
-<%= render partial: 'client_graphs', locals: { path: client_path(@client) } %>
-
-<br/>
-
-<%= render partial: 'logs' %>
