--- a/app/views/clients/_client_graphs.html.erb
+++ b/app/views/clients/_client_graphs.html.erb
@@ -7,7 +7,7 @@
     <div id="jobs_stats"></div>
   </div>
   <div class="col-xs-4">
-    <%= bootstrap_form_tag(url: path, method: :get, layout: :inline) do |f| %>
+    <%= bootstrap_form_tag(url: path, method: :post, layout: :inline) do |f| %>
       <%= f.select(:days_back, [['1 week', 7], ['2 weeks', 14], ['1 month', 30]], selected: params[:days_back]) %>
       <%= f.submit 'See Stats', class: "btn btn-primary" %>
     <% end %>
