--- a/app/views/clients/_recent_jobs.html.erb
+++ b/app/views/clients/_recent_jobs.html.erb
@@ -15,7 +15,7 @@
         </tr>
       </thead>
       <tbody>
-        <%= render partial: 'clients/recent_job', collection: @client.recent_jobs %>
+        <%= render partial: 'clients/recent_job', collection: @jobs %>
       </tbody>
     </table>
   </div>
