--- a/app/views/clients/logs.html.erb
+++ b/app/views/clients/logs.html.erb
@@ -2,9 +2,20 @@
 
 <div class='row'>
   <div class='col-xs-3'>
-    <h3>Logs</h3>
+    <h3>Logs <small>(<%= @logs.total_count %>)</small></h3>
   </div>
+</div>
 
+<div class="row">
+  <div class="col-xs-4">
+    <%= page_entries_info @logs, entry_name: 'log' %>
+  </div>
+  <div class="col-xs-4 right text-right">
+    <%= paginate @logs %>
+  </div>
+</div>
+
+<div class="row">
   <div class="col-xs-12">
     <div class="table-responsive">
       <table class="table table-striped table-bordered table-condensed">
