--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,7 +12,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/clients">Clients</a></li>
+        <%= content_tag(:li, active_class(clients_path, true)) do %>
+          <%= link_to 'Clients', clients_path %>
+        <% end %>
         <li><a href="/contact">Contact</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Profile <span class="caret"></span></a>
@@ -26,8 +28,12 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user.admin? %>
-          <li><%= link_to 'Admin', admin_path %></li>
-          <li><%= link_to 'Clients', admin_clients_path %></li>
+          <%= content_tag(:li, active_class(admin_path)) do %>
+            <%= link_to 'Admin', admin_path %>
+          <% end %>
+          <%= content_tag(:li, active_class(admin_clients_path, true)) do %>
+            <%= link_to 'Clients', admin_clients_path %>
+          <% end %>
         <% end %>
       </ul>
     </div><!--/.nav-collapse -->
