--- a/app/views/admin/clients/_header.html.erb
+++ b/app/views/admin/clients/_header.html.erb
@@ -3,7 +3,8 @@
 <%= breadcrumb_with Client: admin_client_path(@client),
                     Jobs: jobs_admin_client_path(@client),
                     Stats: stats_admin_client_path(@client),
-                    Logs: logs_admin_client_path(@client) %>
+                    Logs: logs_admin_client_path(@client),
+                    Config: configuration_admin_client_path(@client) %>
 
 <h2>
   <%= @client.name %>
