--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -37,6 +37,9 @@
           <%= content_tag(:li, active_class(unverified_admin_hosts_path, true)) do %>
             <%= link_to 'Hosts', unverified_admin_hosts_path %>
           <% end %>
+          <%= content_tag(:li, active_class(admin_settings_path)) do %>
+            <%= link_to 'Settings', admin_settings_path %>
+          <% end %>
         <% end %>
       </ul>
     </div><!--/.nav-collapse -->
