Added ViMa oauth2 strategy to warden
* authenticates the user
* creates the user if needed
* assigns the corresponding ViMa VMs to session

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,2 +1,5 @@
 <%= link_to 'admin', login_path(admin: 'admin'), method: :post, role: :button,
   class: 'btn btn-primary' %>
+
+<%= link_to 'vima', vima_path(vima: 'vima'), method: :post, role: :button,
+  class: 'btn btn-primary' %>
