Show verification status on hosts

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -40,6 +40,7 @@
           <th>FileRetention (days)</th>
           <th>JobRetention (days)</th>
           <th>AutoPrune</th>
+          <th>Verified</th>
           <th>Created At</th>
         </tr>
       </thead>
