--- a/app/views/jobs/_job_details.html.erb
+++ b/app/views/jobs/_job_details.html.erb
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <td><b>Fileset</b></td>
-        <td><%= @job.fileset.name %></td>
+        <td><pre><%= @job.fileset.to_bacula_config_array.join("\n") %></pre></td>
       </tr>
       <% if @job.restore? %>
         <tr>
@@ -25,7 +25,9 @@
       <% else %>
         <tr>
           <td><b>Schedule</b></td>
-          <td><%= @job.schedule.name %></td>
+          <td>
+            <pre><%= @job.schedule.to_bacula_config_array.join("\n") %></pre>
+          </td>
         </tr>
       <% end %>
       <tr>
