--- a/app/views/clients/_header.html.erb
+++ b/app/views/clients/_header.html.erb
@@ -6,7 +6,8 @@
 <% end %>
 
 <%= breadcrumb_with Client: client_path(@client), Jobs: jobs_client_path(@client),
-                    Stats: stats_client_path(@client), Logs: logs_client_path(@client) %>
+                    Stats: stats_client_path(@client), Logs: logs_client_path(@client),
+                    Users: users_client_path(@client) %>
 
 <h2>
   <%= @client.name %>
