--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -48,6 +48,9 @@
           <%= content_tag(:li, active_class(unverified_admin_hosts_path, true)) do %>
             <%= link_to 'Hosts', unverified_admin_hosts_path %>
           <% end %>
+          <%= content_tag(:li, active_class(admin_users_path)) do %>
+            <%= link_to 'Users', admin_users_path %>
+          <% end %>
           <%= content_tag(:li, active_class(admin_settings_path)) do %>
             <%= link_to 'Settings', admin_settings_path %>
           <% end %>
