--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -21,22 +21,19 @@
           <%= content_tag(:li, active_class(clients_path, true)) do %>
             <%= link_to 'Clients', clients_path %>
           <% end %>
-          <li><a href="/contact">Contact</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Profile <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Logout</a></li>
-              <li class="divider"></li>
-              <li class="dropdown-header">Profile</li>
-              <li><a href="#">Edit</a></li>
-            </ul>
-          </li>
-          <% if current_user %>
-            <li><%= link_to current_user.username, '#' %></li>
-          <% end %>
-          <li><%= link_to 'logout', logout_path %></li>
+          <li><%= link_to current_user.username, '#' %></li>
         <% end %>
       </ul>
+      <% if current_user %>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to logout_path do %>
+              <label class="glyphicon glyphicon-log-out"></label>
+              Logout
+            <% end %>
+          </li>
+        </ul>
+      <% end %>
       <% if current_user.try(:admin?) %>
         <ul class="nav navbar-nav navbar-right">
           <%= content_tag(:li, active_class(admin_path)) do %>
