--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -4,16 +4,16 @@
 
   <%= select_with_errors_and_button(
     @job, :job_template, :fileset_id, 'Fileset',
-    options_from_collection_for_select(@host.filesets, :id, :name,
-                                       params[:fileset_id] || @job.fileset_id),
+    options_from_collection_for_select(
+      @host.filesets, :id, :name, params[:fileset_id] || @job.fileset_id),
     new_host_fileset_path(@host, job_id: @job.id))
   %>
 
   <% if !@job.restore? %>
     <%= select_with_errors_and_button(
-      @job, :job_template, :schedule_id,
-      'Schedule', options_from_collection_for_select(@host.schedules, :id, :name,
-                                                     params[:schedule_id] || @job.schedule_id),
+      @job, :job_template, :schedule_id, 'Schedule',
+      options_from_collection_for_select(
+        @host.schedules, :id, :name, params[:schedule_id] || @job.schedule_id),
       new_host_schedule_path(@host, job_id: @job.id))
     %>
   <% end %>
@@ -27,3 +27,7 @@
     </div>
   </div>
 <% end %>
+
+<script type='text/javascript'>
+  var hostId=<%= @host.id %>;
+</script>
