--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,10 +1,28 @@
 <h1>Edit Job Template <%= @job.name %></h1>
 
 <div class="row">
-  <div class="col-xs-6">
-    <div class="container graybox">
-      <h3> Job Attributes</h3>
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3> Job Attributes</h3>
+      </div>
+      <br />
       <%= render 'form' %>
+    </div>
+  </div>
+
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div id="fileset">
+        <% fileset = @fileset || @job.fileset %>
+        <%= render partial: 'fileset', locals: { fileset: fileset } if fileset %>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div id="schedule">
+        <% schedule = @schedule || @job.schedule %>
+        <%= render partial: 'schedule', locals: { schedule: schedule } if schedule %>
+      </div>
     </div>
   </div>
 </div>
