--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -26,7 +26,7 @@
   <div class="col-xs-6">
     <h3>Config File</h3>
     <pre class="pre-scrollable">
-<%= @host.baculize_config.join("\n") %>
+<%= @host.baculize_config_no_pass %>
     </pre>
   </div>
 </div>
