--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,7 +1,14 @@
 <%= notifier(@host.display_message) unless @host.deployed? %>
 
 <div class="row right">
-  <%= link_to 'Remove host', host_path(@host), method: :delete, data: { confirm: 'Are you sure?' },
+  <% if @host.can_be_disabled? %>
+    <%= link_to 'Disable client', disable_host_path(@host), method: :post,
+      data: { confirm: 'This will disable the client. Are you sure?' },
+      class: "btn btn-warning", role: "button" %>
+  <% end %>
+
+  <%= link_to 'Remove client', host_path(@host), method: :delete,
+    data: { confirm: 'This will remove the client from Bacula. Are you sure?' },
     class: "btn btn-danger", role: "button" %>
 </div>
 
