--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,6 +12,7 @@
         <th>clients</th>
         <th>unverified hosts</th>
         <th>pending hosts</th>
+        <th>actions</th>
       </tr>
     </thead>
 
